--- a/BML2_HW6.ipynb
+++ b/BML2_HW6.ipynb
@@ -943,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
        "[3 rows x 311 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1125,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1134,7 +1134,7 @@
        "86"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
        "0"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1165,11 +1165,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rw_clissifiers = ['XGBoost', 'XGBoost_cor']\n",
+    "rw_clissifiers = ['XGBoost']\n",
     "\n",
     "cl_met = ['Best Threshold', 'F-Score', 'Precision', \n",
     "          'Recall', 'roc_auc_s', 'log_loss_s', 'TPR', 'FPR', 'TNR', \"TN\", \"FN\", \"TP\", \"FP\"]\n",
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1235,7 +1235,7 @@
        "(0.3877551020408163, 0.11614730878186968, 0.8838526912181303)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1324,7 +1324,7 @@
        "XGBoost  0.387755  0.116147  0.883853  936  270  171  123  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
