Убрал front, обновил docker-entrypoint.sh

--- a/coursework/ml_credits.ipynb
+++ b/coursework/ml_credits.ipynb
@@ -920,8 +920,8 @@
        " 'Number of Open Accounts',\n",
        " 'Bankruptcies',\n",
        " 'Months since last delinquent',\n",
-       " 'Number of Credit Problems',\n",
-       " 'Years of Credit History']"
+       " 'Years of Credit History',\n",
+       " 'Number of Credit Problems']"
       ]
      },
      "execution_count": 25,
@@ -1058,6 +1058,264 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Maximum Open Credit',\n",
+       " 'Annual Income',\n",
+       " 'Current Loan Amount',\n",
+       " 'Current Credit Balance',\n",
+       " 'Monthly Debt',\n",
+       " 'Credit Score',\n",
+       " 'Home Ownership',\n",
+       " 'Years in current job',\n",
+       " 'Purpose',\n",
+       " 'Term',\n",
+       " 'Tax Liens',\n",
+       " 'Number of Open Accounts',\n",
+       " 'Bankruptcies',\n",
+       " 'Months since last delinquent',\n",
+       " 'Years of Credit History',\n",
+       " 'Number of Credit Problems']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_columns_list = []\n",
+    "total_columns_list.extend(feat_eng_columns)\n",
+    "total_columns_list.extend(cat_list)\n",
+    "total_columns_list.extend(other_columns)\n",
+    "total_columns_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Maximum Open Credit</th>\n",
+       "      <th>Annual Income</th>\n",
+       "      <th>Current Loan Amount</th>\n",
+       "      <th>Current Credit Balance</th>\n",
+       "      <th>Monthly Debt</th>\n",
+       "      <th>Credit Score</th>\n",
+       "      <th>Home Ownership</th>\n",
+       "      <th>Years in current job</th>\n",
+       "      <th>Purpose</th>\n",
+       "      <th>Term</th>\n",
+       "      <th>Tax Liens</th>\n",
+       "      <th>Number of Open Accounts</th>\n",
+       "      <th>Bankruptcies</th>\n",
+       "      <th>Months since last delinquent</th>\n",
+       "      <th>Years of Credit History</th>\n",
+       "      <th>Number of Credit Problems</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4664</th>\n",
+       "      <td>481580.0</td>\n",
+       "      <td>2820569.0</td>\n",
+       "      <td>405416.0</td>\n",
+       "      <td>173432.0</td>\n",
+       "      <td>27030.0</td>\n",
+       "      <td>749.0</td>\n",
+       "      <td>Rent</td>\n",
+       "      <td>&lt; 1 year</td>\n",
+       "      <td>debt consolidation</td>\n",
+       "      <td>Short Term</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>20.3</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4411</th>\n",
+       "      <td>49126.0</td>\n",
+       "      <td>441769.0</td>\n",
+       "      <td>99999999.0</td>\n",
+       "      <td>1824.0</td>\n",
+       "      <td>9535.0</td>\n",
+       "      <td>733.0</td>\n",
+       "      <td>Rent</td>\n",
+       "      <td>&lt; 1 year</td>\n",
+       "      <td>debt consolidation</td>\n",
+       "      <td>Short Term</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>12.6</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Maximum Open Credit  Annual Income  Current Loan Amount  \\\n",
+       "4664             481580.0      2820569.0             405416.0   \n",
+       "4411              49126.0       441769.0           99999999.0   \n",
+       "\n",
+       "      Current Credit Balance  Monthly Debt  Credit Score Home Ownership  \\\n",
+       "4664                173432.0       27030.0         749.0           Rent   \n",
+       "4411                  1824.0        9535.0         733.0           Rent   \n",
+       "\n",
+       "     Years in current job             Purpose        Term  Tax Liens  \\\n",
+       "4664             < 1 year  debt consolidation  Short Term        0.0   \n",
+       "4411             < 1 year  debt consolidation  Short Term        0.0   \n",
+       "\n",
+       "      Number of Open Accounts  Bankruptcies  Months since last delinquent  \\\n",
+       "4664                     10.0           0.0                          77.0   \n",
+       "4411                      5.0           0.0                          14.0   \n",
+       "\n",
+       "      Years of Credit History  Number of Credit Problems  \n",
+       "4664                     20.3                        0.0  \n",
+       "4411                     12.6                        0.0  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train[[*total_columns_list]].head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Maximum Open Credit': {4664: 481580.0, 4411: 49126.0},\n",
+       " 'Annual Income': {4664: 2820569.0, 4411: 441769.0},\n",
+       " 'Current Loan Amount': {4664: 405416.0, 4411: 99999999.0},\n",
+       " 'Current Credit Balance': {4664: 173432.0, 4411: 1824.0},\n",
+       " 'Monthly Debt': {4664: 27030.0, 4411: 9535.0},\n",
+       " 'Credit Score': {4664: 749.0, 4411: 733.0},\n",
+       " 'Home Ownership': {4664: 'Rent', 4411: 'Rent'},\n",
+       " 'Years in current job': {4664: '< 1 year', 4411: '< 1 year'},\n",
+       " 'Purpose': {4664: 'debt consolidation', 4411: 'debt consolidation'},\n",
+       " 'Term': {4664: 'Short Term', 4411: 'Short Term'},\n",
+       " 'Tax Liens': {4664: 0.0, 4411: 0.0},\n",
+       " 'Number of Open Accounts': {4664: 10.0, 4411: 5.0},\n",
+       " 'Bankruptcies': {4664: 0.0, 4411: 0.0},\n",
+       " 'Months since last delinquent': {4664: 77.0, 4411: 14.0},\n",
+       " 'Years of Credit History': {4664: 20.3, 4411: 12.6},\n",
+       " 'Number of Credit Problems': {4664: 0.0, 4411: 0.0}}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train[[*total_columns_list]].head(2).to_dict('dict')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train.set_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Maximum Open Credit': [481580.0, 49126.0, 562320.0],\n",
+       " 'Annual Income': [2820569.0, 441769.0, 1065178.0],\n",
+       " 'Current Loan Amount': [405416.0, 99999999.0, 224246.0],\n",
+       " 'Current Credit Balance': [173432.0, 1824.0, 197657.0],\n",
+       " 'Monthly Debt': [27030.0, 9535.0, 14557.0],\n",
+       " 'Credit Score': [749.0, 733.0, 738.0],\n",
+       " 'Home Ownership': ['Rent', 'Rent', 'Rent'],\n",
+       " 'Years in current job': ['< 1 year', '< 1 year', '8 years'],\n",
+       " 'Purpose': ['debt consolidation', 'debt consolidation', 'debt consolidation'],\n",
+       " 'Term': ['Short Term', 'Short Term', 'Short Term'],\n",
+       " 'Tax Liens': [0.0, 0.0, 0.0],\n",
+       " 'Number of Open Accounts': [10.0, 5.0, 12.0],\n",
+       " 'Bankruptcies': [0.0, 0.0, 1.0],\n",
+       " 'Months since last delinquent': [77.0, 14.0, 41.98792270531401],\n",
+       " 'Years of Credit History': [20.3, 12.6, 24.4],\n",
+       " 'Number of Credit Problems': [0.0, 0.0, 1.0]}"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_for_api = X_train[[*total_columns_list]].head(3).to_dict('list')\n",
+    "dict_for_api"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n",
+      "<class 'dict'>\n",
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict_for_api = X_train[[*total_columns_list]].head(3).T.to_dict('dict').values()\n",
+    "for i in dict_for_api:\n",
+    "    print(type(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
    "outputs": [],
    "source": [
     "feats = FeatureUnion(final_transformers)\n",
@@ -1067,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1097,19 +1355,19 @@
        "                                                                      'since '\n",
        "                                                                      'last '\n",
        "                                                                      'delinquent'))])),\n",
-       "                                 ('Number of Credit Problems',\n",
-       "                                  Pipeline(steps=[('selector',\n",
-       "                                                   NumberSelector(key='Number of '\n",
-       "                                                                      'Credit '\n",
-       "                                                                      'Problems'))])),\n",
        "                                 ('Years of Credit History',\n",
        "                                  Pipeline(steps=[('selector',\n",
        "                                                   NumberSelector(key='Years of '\n",
        "                                                                      'Credit '\n",
-       "                                                                      'History'))]))]))]"
+       "                                                                      'History'))])),\n",
+       "                                 ('Number of Credit Problems',\n",
+       "                                  Pipeline(steps=[('selector',\n",
+       "                                                   NumberSelector(key='Number of '\n",
+       "                                                                      'Credit '\n",
+       "                                                                      'Problems'))]))]))]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1130,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1157,22 +1415,22 @@
        "                                                                                     'since '\n",
        "                                                                                     'last '\n",
        "                                                                                     'delinquent'))])),\n",
-       "                                                ('Number of Credit Problems',\n",
-       "                                                 Pipeline(steps=[('selector',\n",
-       "                                                                  NumberSelector(key='Number '\n",
-       "                                                                                     'of '\n",
-       "                                                                                     'Credit '\n",
-       "                                                                                     'Problems'))])),\n",
        "                                                ('Years of Credit History',\n",
        "                                                 Pipeline(steps=[('selector',\n",
        "                                                                  NumberSelector(key='Years '\n",
        "                                                                                     'of '\n",
        "                                                                                     'Credit '\n",
-       "                                                                                     'History'))]))])),\n",
+       "                                                                                     'History'))])),\n",
+       "                                                ('Number of Credit Problems',\n",
+       "                                                 Pipeline(steps=[('selector',\n",
+       "                                                                  NumberSelector(key='Number '\n",
+       "                                                                                     'of '\n",
+       "                                                                                     'Credit '\n",
+       "                                                                                     'Problems'))]))])),\n",
        "                ('gbc', GradientBoostingClassifier(random_state=42))])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1189,7 +1447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1489,7 @@
        "                               verbosity=None))])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1534,7 @@
      "text": [
       "Best Threshold=0.243829, F-Score=0.569, Precision=0.454, Recall=0.764\n",
       "roc auc score: 0.7647140694489946\n",
-      "log loss score: 0.4756852005761141\n"
+      "log loss score: 0.4756765540762228\n"
      ]
     }
    ],
@@ -1319,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1371,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1676,7 @@
        "      <td>0.453567</td>\n",
        "      <td>0.764172</td>\n",
        "      <td>0.764714</td>\n",
-       "      <td>0.475685</td>\n",
+       "      <td>0.475677</td>\n",
        "      <td>0.761905</td>\n",
        "      <td>0.383381</td>\n",
        "      <td>0.616619</td>\n",
@@ -1453,7 +1711,7 @@
        "XGBClassifier                    0.032725  0.560684  0.449931  0.743764   \n",
        "\n",
        "                           roc_auc_s log_loss_s       TPR       FPR       TNR  \\\n",
-       "GradientBoostingClassifier  0.764714   0.475685  0.761905  0.383381  0.616619   \n",
+       "GradientBoostingClassifier  0.764714   0.475677  0.761905  0.383381  0.616619   \n",
        "XGBClassifier               0.745606   0.867242  0.741497  0.378659  0.621341   \n",
        "\n",
        "                             TN   FN   TP   FP  \n",
@@ -1461,7 +1719,7 @@
        "XGBClassifier               658  114  327  401  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1472,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1482,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
