Обновил ml_credits_evaluation.ipynb

--- a/coursework/ml_credits_evaluation.ipynb
+++ b/coursework/ml_credits_evaluation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -63,13 +63,13 @@
        "[None, None]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[print_my(x) for x in X_test_m[[*total_columns_list]].head(2).T.to_dict('dict').values()]"
+    "[print_my(x) for x in X_test_m[total_columns_list].head(2).T.to_dict('dict').values()]"
    ]
   },
   {
